[tool.poetry]
name = "django-dokflow"
version = "1.0.0"
description = "Production-grade Document Management for Django"
authors = ["samillen <samillen@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/samillen/django-dokflow"

packages = [
    { include="dokflow", from="." },
]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.2"
Pillow = "^8.2.0"
freezegun = "^1.1.0"
pdf2image = "^1.14.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
black = "^20.8b1"
pre-commit = "^2.12.0"
factory-boy = "^3.2.0"
poetry = "^1.1.6"
pytest = "^6.2.3"
pytest-django = "^4.2.0"
pytest-cov = "^2.11.1"
tox = "^3.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
